--- a/src/main/resources/org/fxpart/testWithItem.fxml
+++ b/src/main/resources/org/fxpart/testWithItem.fxml
@@ -3,34 +3,31 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.fxpart.combobox.AutosuggestFX?>
-<GridPane alignment="center" hgap="10" prefHeight="800.0" prefWidth="1280.0" vgap="10"
-          xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="org.fxpart.ControllerWithItem">
+<GridPane alignment="center" hgap="10" prefHeight="800.0" prefWidth="1280.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fxpart.ControllerWithItem">
 
-    <Button text="Change T KV" fx:id="change" onAction="#changeT" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
-    <Button text="Change B Prop" fx:id="changeP" onAction="#changeB" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-    <Button text="Clear Item" fx:id="clear" onAction="#clear" GridPane.columnIndex="3" GridPane.rowIndex="0"/>
-    <Button text="Debug" fx:id="debug" onAction="#debug" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-    <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-    <Button text="context menu" onAction="#ctx" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+    <Button fx:id="change" onAction="#changeT" text="Change T KV" GridPane.columnIndex="2" />
+    <Button fx:id="changeP" onAction="#changeB" text="Change B Prop" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+    <Button fx:id="clear" onAction="#clear" text="Clear Item" GridPane.columnIndex="3" />
+    <Button fx:id="debug" onAction="#debug" text="Debug" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+    <Label styleClass="table-view" text="Autosuggest: get location" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Button onAction="#ctx" text="context menu" GridPane.columnIndex="4" GridPane.rowIndex="1" />
 
-    <AutosuggestFX fx:id="autosuggest" GridPane.columnIndex="1" GridPane.rowIndex="2" acceptFreeTextValue="false" GridPane.columnSpan="4" />
+    <AutosuggestFX fx:id="autosuggest" acceptFreeTextValue="false" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
 
-    <AutosuggestFX fx:id="autosuggest_contextmenu" GridPane.columnIndex="1" GridPane.rowIndex="3" acceptFreeTextValue="false"/>
+    <AutosuggestFX fx:id="autosuggest_contextmenu" acceptFreeTextValue="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
     <columnConstraints>
-        <ColumnConstraints maxWidth="10.0" minWidth="10.0" prefWidth="45.0"/>
-        <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="191.0"/>
-        <ColumnConstraints maxWidth="781.0" minWidth="184.0" prefWidth="184.0"/>
-        <ColumnConstraints maxWidth="590.0" minWidth="197.0" prefWidth="197.0"/>
-        <ColumnConstraints maxWidth="203.0" minWidth="10.0" prefWidth="203.0"/>
-        <ColumnConstraints maxWidth="203.0" minWidth="10.0" prefWidth="203.0"/>
+        <ColumnConstraints maxWidth="10.0" minWidth="10.0" prefWidth="45.0" />
+        <ColumnConstraints maxWidth="216.0" minWidth="10.0" prefWidth="191.0" />
+        <ColumnConstraints maxWidth="781.0" minWidth="184.0" prefWidth="184.0" />
+        <ColumnConstraints maxWidth="590.0" minWidth="197.0" prefWidth="197.0" />
+        <ColumnConstraints maxWidth="203.0" minWidth="10.0" prefWidth="203.0" />
+        <ColumnConstraints maxWidth="203.0" minWidth="10.0" prefWidth="203.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="30.0"/>
-        <RowConstraints maxHeight="36.0" minHeight="0.0" prefHeight="30.0"/>
-        <RowConstraints maxHeight="36.0" minHeight="0.0" prefHeight="30.0"/>
-        <RowConstraints maxHeight="89.0" minHeight="53.0" prefHeight="59.0"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0"/>
+        <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints maxHeight="36.0" minHeight="0.0" prefHeight="30.0" />
+        <RowConstraints />
+        <RowConstraints />
     </rowConstraints>
 </GridPane>
